[package]
name = "mdr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
pulldown-cmark = "0.13.4"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", features = ["default-onig"] }
toml = "1.1.2"
unicode-width = "0.2.2"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
